--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "gulp-load-plugins": "^0.8.0",
     "gulp-image-optimization": "^0.1.3",
     "gulp-uncss": "^0.5.2"
+  },
+  "dependencies": {
+    "instafeed.js": "^1.3.2"
   }
 }
